[package]
name = "bitter"
version = "0.6.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Swiftly extracts unaligned bit-level data from a byte slice"
repository = "https://github.com/nickbabcock/bitter"
readme = "README.md"
keywords = ["bitstream", "bits", "binary"]
categories = ["parsing", "no-std"]
license = "MIT"
include = ["src/**/*.rs", "benches"]
edition = "2018"

[features]
default = ["std"]
std = []

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "bench_bits"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["csv_output"] }
quickcheck = "1"
quickcheck_macros = "1"
