[package]
name = "bitter"
version = "0.9.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Swiftly extracts unaligned bit-level data from a byte slice"
repository = "https://github.com/nickbabcock/bitter"
readme = "README.md"
keywords = ["bitstream", "bits", "binary"]
categories = ["parsing", "no-std"]
license = "MIT"
include = ["src/**/*.rs", "benches"]
edition = "2018"

[features]
default = ["std"]
std = []

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
no-panic = "0.1"
