[package]
name = "compare"
version = "0.0.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[workspace]
members = ["."]

[dev-dependencies]
bitbuffer = "0.11.1"
bitreader = "0.3.11"
bitstream-io = "4.2.0"
bitter = {path = ".." }
bitvec = "1.0.1"
criterion = { version = "0.6", features = ["csv_output"] }
llvm-bitcursor = "0.0.3"
fastrand = "2.3.0"

[profile.bench]
debug = true

[[bench]]
name = "bench_bits"
harness = false
